# hust-homework-and-labs

./: .gitattributes  .gitmodules  LICENSE  README.md
courses/操作系统/: 2020-操作系统试题-A卷(1).docx  操作系统复习.md
courses/操作系统/操作系统往年试卷/往年试卷/: 2020-A(答案）.doc  2020-A.docx  2020-os-b卷.docx  2020-os-b卷答案.doc  2020-操作系统试题-A卷答案.doc  2022-操作系统试题-二学位(2).docx
courses/操作系统/第3版习题答案/: 第1章习题及答案.docx  第2章习题及答案.docx  第3章习题及答案.docx  第4章习题及答案.doc  第5章习题及答案.doc  第6章习题及答案.docx  第7章习题及答案.doc  第8章习题及答案.doc  第9章习题及答案.doc
courses/数据库/作业/: 2022-2023第二学期期中考查及参考.docx  重点练习20220609.doc
courses/数据库/试卷/2019作业及测验/: 作业一.docx  作业一参考答案.doc  作业三参考答案.docx  作业二.doc  作业二参考答案.docx  课堂测验1 - 参考答案.doc  课堂测验1.doc  课堂测验2 - 参考答案.ppt  课堂测验2.ppt
courses/编译原理/试卷/: 编译原理第三版课外作业答案 (1).docx  编译原理重点知识点梳理_2022-06-15.pptx
courses/计算机系统结构/作业/: 作业8.md  第七章.md  第三章.md  第九章.md  第五章.md  计算机系统结构习题-修订20220508.pptx
labs/函数式/: 函数式报告.doc
labs/图神经/: 图神经网络报告.docx
labs/嵌入式/: 报告-脱敏.docx
labs/嵌入式/lab-2022-st/common/: common.h  graphic.c  rules.mk
labs/嵌入式/lab-2022-st/lab4/: main.c
labs/嵌入式/lab-2022-st/lab6/: Makefile  board_interact.c  board_interact.h  button.c  button.h  client.c  err.txt  func.h  gomoku.h  gomoku_1p_with_ai.c  gomoku_ai.c  gomoku_ai.h  gomoku_board.c  gomoku_client.c  (+13 more)
labs/操作系统/: README.md  操作系统实验报告.docx
labs/数据库/: 报告-脱敏.docx
labs/数据库/代码文件/: readme.txt
labs/组原课设/单人任务/: 硬件综合训练.docx
labs/组原课设/团队任务代码/: README.md
labs/编译原理/: 报告-脱敏.docx
labs/编译原理/代码/lab5/src/: CMakeLists.txt  main.cpp
labs/编译原理/代码/lab5/src/checker/: CMakeLists.txt  checker.cpp
labs/编译原理/代码/lab5/src/ir/: CMakeLists.txt
labs/编译原理/代码/lab5/src/parser/: ast.h  define.h
labs/编译原理/代码/lab5/src/riscv/: CMakeLists.txt
labs/编译原理/代码/lab6-2/src/: CMakeLists.txt  makefile
labs/编译原理/代码/lab6-2/src/AST/: CMakeLists.txt  parser.cpp  parser.hpp  tokens.cpp
labs/编译原理/代码/lab6-2/src/IR/: CMakeLists.txt  genIR.cpp
labs/编译原理/代码/lab7-1/: CMakeLists.txt  grading.sh  grading1.sh
labs/编译原理/代码/lab7-1/llvm_ir/: dse_slow.c  dse_slow.ll  instcombine.ll  loop_slow.c  loop_slow.ll  test2.ll
labs/编译原理/代码/lab7-1/src/: gcd.c
labs/编译原理/代码/lab7-1/src/step1/: Makefile  codegen.cc  main.cc  opt.cc
labs/编译原理/代码/lab7-1/src/step1/include/: codegen.h  opt.h
labs/编译原理/代码/lab7-1/test-cases/: dijkstra.ans  hanoi.ans
labs/计算机系统基础/: 报告-脱敏.doc
labs/计算机系统基础/lab1/: ans.c
labs/计算机系统基础/lab2/: ans.txt
labs/计算机视觉/报告和作业/: Quantization.md  报告-脱敏.docx  第一次作业.md
labs/计网/实验报告电子档/: 实验报告.doc
(+249 files in other folders)
